--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@
     justify-content: center;
     flex-wrap: nowrap;
 }
-button {
-
+button, input {
     height: 100px;
     width: 100px;
+}
+button:focus {
+    background: grey;
 }
 i {
     font-size: 50px;
