--- a/style.css
+++ b/style.css
@@ -1,23 +1,37 @@
-.container {
+h1 {
+    font-family: 'Press Start 2P', cursive;
+    text-align: center;
+}
+.header{
+    height: 200px;
+}
+.btns {
     display: flex;
     flex-direction: row;
     justify-content: center;
     flex-wrap: nowrap;
 }
-button, input {
-    height: 100px;
-    width: 100px;
+.btn {
+    height: auto;
+    width: auto;
+    background: none;
+    border: none;
+    margin: 50px;
+    /* outline: none; */
 }
-button:focus {
+.btn:hover {
+    transform: scale(1.2);
+    transition: 100ms;
+}
+/* button:focus {
     background: grey;
-}
+} */
 i {
-    font-size: 50px;
+    font-size: 100px;
+    color: black;
 
 }
-#rock, #paper {
-    transform: rotate(-90deg);
-}
+
 input {
    float: right;
 }
